@@ -41,9 +41,6 @@ class RevelationApplet(object):
 		self.iid	= iid
 
 		sys.excepthook	= self.__cb_exception
-		self.applet.connect("destroy", self.__cb_destroy)
-
-		self.ccbs = []
 
 		try:
 			self.__init_facilities()
@@ -69,8 +66,8 @@ class RevelationApplet(object):
 		self.locktimer		= ui.Timer()
 
 		self.__setup_prefs()
-		self.ccbs.append(self.config.monitor("file", self.__cb_config_file))
-		self.ccbs.append(self.config.monitor("autolock_timeout", lambda k,v,d: self.locktimer.start(v * 60)))
+		self.config.monitor("file", self.__cb_config_file)
+		self.config.monitor("autolock_timeout", lambda k,v,d: self.locktimer.start(v * 60))
 
 		self.datafile.connect("changed", self.__cb_file_changed)
 		self.datafile.connect("content-changed", self.__cb_file_content_changed)
@@ -147,13 +144,6 @@ class RevelationApplet(object):
 		self.dialog_about	= None
 		self.dialog_password	= None
 		self.dialog_prefs	= None
-
-
-	def __cb_destroy(self, widget, data = None):
-		"Callback for destroy"
-
-		for id in self.ccbs:
-			self.config.forget(id)
 
 
 	def __cb_icon_buttonpress(self, widget, data = None):
